# calcos

./: .gitignore  CMakeLists.txt  Makefile  README.md  build-options.example  platform.mk
src/: Makefile  blink1000.h  blink500.h  config.h  debug.h  dock.c  dock.h  firmwares.h  font.c  font.h  gfx.c  gfx.h  icons.c  icons.h  image.h  kernel.c  keyboard.c  keyboard.h  main-avr.c  main-sim.c  main.c  memory.c  memory.h  platform.h  screen.c  screen.h  types.h  uart.h  uart_common.c  utils.h  wallpaper.h
src/arch/esp32s3/: Makefile  esp32s3.ld  esp32s3_mem.h  start.S  uart.c
src/drv/: analog.c  analog.h  digital.c  digital.h  display.c  display.h  display_sim.c  display_st7565.c  display_st7567.c  display_st7789.c  keyboard.h  mem.h  power.h  spi.c  spi.h  timer.h  uart.c  uart.h
src/drv/avr/: analog.c  digital.c  keyboard.c  mem.c  timer.c  uart.c
src/drv/sim/: display.c  keyboard.c  mem.c  timer.c  uart.c
src/firmwares/: blink.c
src/screens/: flasher_screen.c  flasher_screen.h  home_screen.c  home_screen.h  screen.c  screen.h
src/ui/: button.c  button.h  image.c  image.h  imgui.c  imgui.h  menu.c  menu.h  node.c  node.h  popup_menu.c  popup_menu.h  text.c  text.h  ui.h
tools/: bin2header.py  image2bits.py
